Seasonal: add Onam, Diwali, St Patrick’s, May Day, Mothers/Fathers/Teachers/Doctors/Nurses Day

--- a/index.html
+++ b/index.html
@@ -137,12 +137,22 @@ index.html
           <div class="card soft">
             <h4>Seasonal Theme</h4>
             <label>Active Theme
-              <select id="seasonTheme">
-                <option value="none">None</option>
-                <option value="christmas">Christmas (Snow + Santa)</option>
-                <option value="newyear">New Year (Fireworks)</option>
-              </select>
-            </label>
+  <select id="seasonTheme">
+    <option value="none">None</option>
+    <option value="christmas">Christmas (Snow + Santa)</option>
+    <option value="newyear">New Year (Fireworks)</option>
+    <option value="diwali">Diwali (Lanterns + Fireworks)</option>
+    <option value="onam">Onam (Flower petals)</option>
+    <option value="stpatricks">St Patrick’s Day (☘️ rain)</option>
+    <option value="mayday">May Day (red confetti)</option>
+    <option value="mothersday">Mother’s Day (🌷/💖)</option>
+    <option value="fathersday">Father’s Day (🎩/💙)</option>
+    <option value="teachersday">Teachers’ Day (✏️/📚)</option>
+    <option value="doctorsday">Doctors’ Day (⚕️/❤️‍🩹)</option>
+    <option value="nursesday">Nurses’ Day (🩺/💟)</option>
+  </select>
+</label>
+
             <label>Start Date <input id="seasonStart" type="date"></label>
             <label>End Date <input id="seasonEnd" type="date"></label>
             <label>Custom Message <input id="seasonMsg" placeholder="Happy Holidays!"></label>
